# recsys-value-metrics

./: README.md  base.py  metrics.ipynb  names.py  pyproject.toml  revenue.py
.ipynb_checkpoints/: base-checkpoint.py  metrics-checkpoint.ipynb
examples/: metrics.ipynb  spark.ipynb
src/: base.py  metrics.py  names.py
